kylin-recorder (1.2.23kord~rc16) v101; urgency=high

  * 修复bug43240：用户手册内容与麒麟录音实际情况不符
  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800

kylin-recorder (1.2.23kord~rc15) v101; urgency=high

  * 修复bug42578：点击迷你模式后点击还原，窗口是最小化在任务栏，不是还原到正常窗口
  * 修复bug32962：点击“迷你”后再点击“还原”按钮，概率性出现最小化到任务栏

 -- baijincheng <baijincheng@kylinos.cn>  Wed, 17 Mar 2021 16:13:00 +0800

kylin-recorder (1.2.23kord~rc14) v101; urgency=high

  * 修复bug42481：关于中没有软件功能的描述

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 21:54:00 +0800

kylin-recorder (1.2.23kord~rc13) v101; urgency=high

  * 修复bug42881：改变系统字号，文件列表时长跟随变化了，但功能菜单下拉列表没有跟随变化
  * 修复bug42574：根据用户手册，设置中缺少m4a格式
  * 修复bug41587：多个录音文件，连续删除时，删除1-2个文件后会有一个1~3s的卡顿
  * 修复bug36574：连接蓝牙耳机无法录制音频

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 16 Mar 2021 12:05:00 +0800

kylin-recorder (1.2.23kord~rc12) v101; urgency=high

  * 修复bug40381：文件列表第7个文件显示一半

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 11 Mar 2021 21:27:00 +0800

kylin-recorder (1.2.23kord~rc11) v101; urgency=high

  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
  * 修复bug41442：在主界面点击录音图标后，鼠标悬浮文件列表某一文件，录音开始后，此文件一直为被选中状态
  * 修复bug41589：开始录音时，连续点击暂停按钮，进度条不能正常进行

 -- baijincheng <baijincheng@kylinos.cn>  Tue, 9 Mar 2021 15:27:00 +0800s

kylin-recorder (1.2.23kord~rc10) v101; urgency=high

  * 修复bug41693：长时间录音（10分钟以上），点击停止录音，弹出弹窗点击确定，连续多次点击停止录音，麒麟录音闪退
  * 修复bug41685：长时间录音（10分钟以上），点击停止录音，弹出弹窗点击确定，连续多次点击停止录音，保存多个录音文件

 -- baijincheng <baijincheng@kylinos.cn>  Mon, 8 Mar 2021 17:52:00 +0800

kylin-recorder (1.2.23kord~rc9) v101; urgency=high

  * DBus信号接收，代码对接

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Mar 2021 20:25:00 +0800

kylin-recorder (1.2.23kord~rc8) v101; urgency=high

  * 修复bug41279：静音图标显示不全
  * 修复bug41257：录制时将音量调制静音，点击停止，再次点击录音后音量条在最左端却不显示静音图标

 -- baijincheng <baijincheng@kylinos.cn>  Thu, 4 Mar 2021 20:25:00 +0800

kylin-recorder (1.2.23kord~rc7) v101; urgency=high

  * 修复漏洞
  * 解决mini模式下录音时点击关闭弹出提示框后还能关闭的问题。
