@@ -24,9 +24,84 @@
 #include <fcntl.h>
 #include <syslog.h>
 
+#define DOUBLE 2
+#define MAX_FILE_SIZE 1024
+#define LOG_FILE0 "demo_0.log"
+#define LOG_FILE1 "demo_1.log"
+#define LOG_FILE_PATH "/.cache/kylin-recorder/log"
+/************************************************
+* 函数名称：qtMessagePutIntoLog
+* 功能描述：日志记录函数
+* 输入参数：qDebug标准输出
+* 输出参数：kylinRecorderLog.txt
+* 修改日期：2021.03.22
+* 修改内容：
+*   创建  bjc
+*
+*************************************************/
+void messageOutput(QtMsgType type, const QMessageLogContext &context, const QString &msg)
+{
+    QByteArray localMsg = msg.toLocal8Bit();
+    QByteArray currentTime = QTime::currentTime().toString().toLocal8Bit();
+
+    QString name[DOUBLE] = {LOG_FILE0, LOG_FILE1};
+    FILE *log_file = nullptr;
+    QString logFilePath;
+    int fileSize;
+    static int i = 0;
+    QDir dir;
+    bool flag = false;
+
+    logFilePath = QDir::homePath() + LOG_FILE_PATH;
+    if (dir.mkpath(logFilePath)) {
+        flag = true;
+    }
+
+    if (flag) {
+        logFilePath = logFilePath + "/" + name[i];
+        log_file = fopen(logFilePath.toLocal8Bit().constData(), "a+");
+    }
+
+    const char *file = context.file ? context.file : "";
+    const char *function = context.function ? context.function : "";
+    switch (type) {
+    case QtDebugMsg:
+        if (!log_file) {
+            break;
+        }
+        fprintf(log_file, "Debug: %s: %s (%s:%u, %s)\n", currentTime.constData(), localMsg.constData(), file, context.line, function);
+        break;
+    case QtInfoMsg:
+        fprintf(log_file? log_file: stdout, "Info: %s: %s (%s:%u, %s)\n", currentTime.constData(), localMsg.constData(), file, context.line, function);
+        break;
+    case QtWarningMsg:
+        fprintf(log_file? log_file: stderr, "Warning: %s: %s (%s:%u, %s)\n", currentTime.constData(), localMsg.constData(), file, context.line, function);
+        break;
+    case QtCriticalMsg:
+        fprintf(log_file? log_file: stderr, "Critical: %s: %s (%s:%u, %s)\n", currentTime.constData(), localMsg.constData(), file, context.line, function);
+        break;
+    case QtFatalMsg:
+        fprintf(log_file? log_file: stderr, "Fatal: %s: %s (%s:%u, %s)\n", currentTime.constData(), localMsg.constData(), file, context.line, function);
+        break;
+    }
+
+    if (log_file) {
+        fileSize = ftell(log_file);
+        if (fileSize >= MAX_FILE_SIZE) {
+            i = (i + 1) % DOUBLE;
+            logFilePath = QDir::homePath() + LOG_FILE_PATH + "/" + name[i];
+            if (QFile::exists(logFilePath)) {
+                QFile temp(logFilePath);
+                temp.remove();
+            }
+        }
+        fclose(log_file);
+    }
+}
 
 int main(int argc, char *argv[])
 {
+    qInstallMessageHandler(messageOutput);//日志输出功能
     /*
      * 添加4K 屏幕支持。
      */
