@@ -1,3 +1,13 @@
+kylin-recorder (1.2.23kord~rc17) v101; urgency=high
+
+  * 修复bug44130：点击开始录音，等待系统自动关闭，重复多次测试，发现应用录音的时长不一致
+  * 修复bug41447：点击开始录音后，大概卡顿两秒后才开始录音
+  * 修复bug34915：在麒麟录音界面删除的录音文件，不会进入回收站，而是直接被删除了
+  * 修复bug41602：在录音时，点击音量进度条调节音量时，鼠标点击热区问题
+  * 修复bug41596：在录音时，建议点击音量图标可以进行静音操作
+
+ -- baijincheng <baijincheng@kylinos.cn>  Thu, 18 Mar 2021 16:22:00 +0800
+
 kylin-recorder (1.2.23kord~rc16) v101; urgency=high
 
   * 修复bug43240：用户手册内容与麒麟录音实际情况不符
